--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.0.0",
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "chalk": "^2.4.1",
     "compression": "1.7.3",
     "connected-react-router": "4.5.0",
@@ -84,7 +86,6 @@
     "react-router-dom": "4.3.1",
     "redux": "4.0.1",
     "redux-immutable": "4.0.0",
-    "redux-saga": "0.16.2",
     "reselect": "4.0.0",
     "sanitize.css": "4.1.0",
     "styled-components": "4.0.2",
@@ -128,11 +129,10 @@
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-prettier": "3.0.0",
     "eslint-plugin-react": "7.11.1",
-    "eslint-plugin-redux-saga": "0.9.0",
     "file-loader": "2.0.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
-    "image-webpack-loader": "4.4.0",
+    "image-webpack-loader": "^4.6.0",
     "imports-loader": "0.8.0",
     "jest-cli": "23.6.0",
     "jest-styled-components": "6.2.2",
@@ -149,7 +149,7 @@
     "rimraf": "2.6.2",
     "shelljs": "^0.8.2",
     "style-loader": "0.23.1",
-    "stylelint": "9.6.0",
+    "stylelint": "^9.10.1",
     "stylelint-config-recommended": "2.1.0",
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.5.0",
