--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.0.0",
+    "@date-io/luxon": "^1.1.0",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "chalk": "^2.4.1",
@@ -76,6 +77,8 @@
     "ip": "1.1.5",
     "loadable-components": "2.2.3",
     "lodash": "4.17.11",
+    "luxon": "^1.12.0",
+    "material-ui-pickers": "^2.2.4",
     "minimist": "1.2.0",
     "prop-types": "15.6.2",
     "react": "16.6.0",
