working on deep clone

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "intl": "1.2.5",
     "invariant": "2.2.4",
     "ip": "1.1.5",
+    "jquery": "^3.4.1",
     "loadable-components": "2.2.3",
     "lodash": "4.17.11",
     "luxon": "^1.12.0",
