--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "react-intl": "2.7.2",
     "react-redux": "5.0.7",
     "react-router-dom": "4.3.1",
+    "react-text-mask": "^5.4.3",
     "redux": "4.0.1",
     "redux-immutable": "4.0.0",
     "reselect": "4.0.0",
@@ -138,7 +139,7 @@
     "html-webpack-plugin": "3.2.0",
     "image-webpack-loader": "^4.6.0",
     "imports-loader": "0.8.0",
-    "jest-cli": "23.6.0",
+    "jest-cli": "^24.8.0",
     "jest-styled-components": "6.2.2",
     "lint-staged": "7.3.0",
     "ngrok": "3.1.0",
