--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "luxon": "^1.12.0",
     "material-ui-pickers": "^2.2.4",
     "minimist": "1.2.0",
+    "npm": "^6.9.0",
     "prop-types": "15.6.2",
     "react": "16.6.0",
     "react-dom": "16.6.0",
@@ -89,6 +90,7 @@
     "react-redux": "5.0.7",
     "react-router-dom": "4.3.1",
     "react-text-mask": "^5.4.3",
+    "recharts": "^1.6.2",
     "redux": "4.0.1",
     "redux-immutable": "4.0.0",
     "reselect": "4.0.0",
