--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@date-io/luxon": "^1.1.0",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "axios": "^0.18.0",
     "chalk": "^2.4.1",
     "compression": "1.7.3",
     "connected-react-router": "4.5.0",
@@ -93,7 +94,6 @@
     "recharts": "^1.6.2",
     "redux": "4.0.1",
     "redux-immutable": "4.0.0",
-    "request": "^2.88.0",
     "reselect": "4.0.0",
     "sanitize.css": "4.1.0",
     "styled-components": "4.0.2",
