--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "@date-io/luxon": "^1.1.0",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "chalk": "^2.4.1",
     "compression": "1.7.3",
     "connected-react-router": "4.5.0",
@@ -98,6 +98,7 @@
     "reselect": "4.0.0",
     "sanitize.css": "4.1.0",
     "styled-components": "4.0.2",
+    "universal-cookie": "^4.0.0",
     "warning": "4.0.2"
   },
   "devDependencies": {
